--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   buildAndDeploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -15,6 +16,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
       - name: Build React App
         run: yarn install && yarn run build
       - name: Deploy app build to S3 bucket
