--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Build React App
         run: yarn install && yarn run build
       - name: Deploy app build to S3 bucket
-        run: aws s3 sync ./dist/ s3://menu-demo --delete
+        run: aws s3 sync ./build/ s3://menu-demo --delete
