--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -1,13 +1,13 @@
-name: Deployment
+name: Staging deployment
 
 on:
   push:
     branches:
-      - main
+      - develop
 
 jobs:
-  buildAndDeploy:
-    name: Build and Deploy
+  buildAndDeployStaging:
+    name: Build and Deploy (Staging)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -20,4 +20,4 @@ jobs:
       - name: Build React App
         run: yarn install && yarn run build
       - name: Deploy app build to S3 bucket
-        run: aws s3 sync ./build/ s3://menu-demo --delete
+        run: aws s3 sync ./build/ s3://dev-menu-demo --delete
