--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-typewriter-effect": "^1.0.2"
   },
   "devDependencies": {
+    "emailjs-com": "^2.6.4",
+    "smooth-scroll": "^16.1.3",
     "typescript": "3.3.3"
   },
   "scripts": {
