--- a/src/data/another-dinner/config.json
+++ b/src/data/another-dinner/config.json
@@ -1,5 +1,5 @@
 {
-    "primaryColor": "#000266",
-    "secondaryColor": "#1c2f99",
+    "primaryColor": "blue",
+    "secondaryColor": "LightBlue",
     "lightColor": "#fafafd"
 }
