remove support for landing page

--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "i18next": "^20.3.0",
+    "i18next-browser-languagedetector": "^6.1.1",
+    "i18next-http-backend": "^1.2.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-i18next": "^11.8.15",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.0.1",
     "react-typewriter-effect": "^1.0.2"
