Improving demo styles

--- a/src/data/another-dinner/config.json
+++ b/src/data/another-dinner/config.json
@@ -1,5 +1,5 @@
 {
-    "primaryColor": "blue",
-    "secondaryColor": "LightBlue",
+    "primaryColor": "rgb(229, 0, 125)",
+    "secondaryColor": "rgb(156, 161, 176)",
     "lightColor": "#fafafd"
 }
